2006-05-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_geometry.c: Now be smarter about child
	  allocation width when working with fixed.

2006-05-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Fix reference to the security/AllowRemoteAutoLogin
	  so it is accessed as a boolean, not a string.  Fixes remote 
	  autologin so it works again.

2006-05-04  Brian Cameron  <brian.cameron@sun.com>

	* daemon/misc.c: Fix syntax.

2006-05-04  Brian Cameron  <brian.cameron@sun.com>

	* daemon/display.c, daemon/slave.c, daemon/misc.c: Improvements to
	  signal handling, fixing problem where GDM slave can hang on read.
	  Fixes bug #336549.  Patch provided by Ed Catmur <ed@catmur.co.uk>.
	* AUTHORS: Added Ed.

2006-05-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix invokation of PreFetch list.

2006-05-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, daemon/gdmconfig.c, daemon/server.c:  Fixes to	
	  better support FreeBSD.  Fixes bug #340668.  Patch provided by
	  Joe Marcus Clark <marcus@freebsd.org>.

2006-05-04  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_parser.c: Remove double-free.  Fixes bug
	  #340668.  Patch provided by Joe Marcus Clark <marcus@freebsd.org>.

2006-05-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdmconfig.h: Remove gdm_config_init from header since it
	  is a static function in the c file.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.0:
        * NEWS: Updated.
	* gui/gdmlogin.c:  Now use "Start Over" instead of Cancel.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.14.5:
        * NEWS: Updated.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf-custom: Added comment before [servers] section
	  to address bug #340333.  

2006-05-01  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* daemon/slave.c: Explicitly adjust the effective GID before