@@ -1,3 +1,10 @@
+2006-05-09  Brian Cameron  <brian.cameron@sun.com>
+
+	* configure.ac, config/Makefile.am, utils/Makefile.am: Fix the
+	  installation of ssh.desktop and gdm-ssh-session so that the
+	  desktop file is translated and gdm-ssh-session is installed
+	  to libexecdir.  Fixes bugs #340958 and #340960.
+
 2006-05-08  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/greeter/greeter_geometry.c: Now be smarter about child
